<resources>
    <string name="app_name">MyVideoRecorder</string>
    <string name="tab_text_1">RECORD</string>
    <string name="tab_text_2">SAVED RECORDINGS</string>
    <string name="recordLabel">Record</string>

    <string name="recordingTitleLabel">Add the title of recording:</string>
    <string name="recordingNameLabel">Type Recording name</string>
    <string name="recordingDurationLabel">Choose the duration of recording:</string>
    <string name="slider_desc">Slider for setting recording time</string>
    <string name="label_video_duration">Video will be recorded for: </string>
</resources>